--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mentoria-poc": {
+    "job-listing": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mentoria-poc",
+            "outputPath": "dist/job-listing",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,9 +24,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -61,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mentoria-poc:build"
+            "browserTarget": "job-listing:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "mentoria-poc:build:production"
+              "browserTarget": "job-listing:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mentoria-poc:build"
+            "browserTarget": "job-listing:build"
           }
         },
         "test": {
@@ -109,16 +112,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "mentoria-poc:serve"
+            "devServerTarget": "job-listing:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "mentoria-poc:serve:production"
+              "devServerTarget": "job-listing:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "mentoria-poc"
+  "defaultProject": "job-listing"
 }
